--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,6 +4,7 @@ if (project.hasProperty("topobyte")) {
 }
 
 dependencies {
+    compile 'org.apache.shiro:shiro-core:1.4.1'
 }
 
 def pomInfo = new XmlSlurper().parse(new File(projectDir, 'info.pom'));
