--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     compile project(':shiro-utils-core')
+
+    compile 'de.topobyte:commons-cli-helper:0.1.0'
 }
 
 task copyJars(type: Copy) {
