--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile project(':shiro-utils-core')
+    implementation project(':shiro-utils-core')
 
-    compile 'de.topobyte:commons-cli-helper:0.1.0'
+    implementation 'de.topobyte:commons-cli-helper:0.1.0'
 }
 
 task copyJars(type: Copy) {
@@ -11,7 +11,7 @@ task copyJars(type: Copy) {
 
 task copyDeps(type: Copy) {
     into "$buildDir/lib-run"
-    from configurations.runtime
+    from configurations.runtimeClasspath
 }
 
 task createRuntime(dependsOn: [copyJars, copyDeps]) {
